# dm_hw

./: .gitignore  README.md  main.py  one.ipynb  pyproject.toml
deeplearning/: README.md  dataset.py  ml25m_deeprec_template.py  quick_eda_ml25m.py  train.py
deeplearning/finalrec/: README_PROJECT.md  config.py  eval_full.py  infer.py  model.py  plot_logs.py  preprocess_ml25m.py  train.py
lightning_logs/version_0/: events.out.tfevents.1763718138.Bingo.19672.0
lightning_logs/version_1/: events.out.tfevents.1763718183.Bingo.29132.0  events.out.tfevents.1763718210.Bingo.29132.1  hparams.yaml
lightning_logs/version_2/: events.out.tfevents.1763718364.Bingo.14820.0  events.out.tfevents.1763718380.Bingo.14820.1
lightning_logs/version_3/: events.out.tfevents.1763718739.Bingo.23560.0
lightning_logs/version_4/: events.out.tfevents.1763719343.Bingo.25648.0
lightning_logs/version_5/: events.out.tfevents.1763719500.Bingo.4492.0  events.out.tfevents.1763719547.Bingo.4492.1  hparams.yaml
lightning_logs/version_6/: events.out.tfevents.1763720407.Bingo.25764.0  events.out.tfevents.1763720446.Bingo.25764.1
lightning_logs/version_7/: events.out.tfevents.1763720536.Bingo.22500.0  events.out.tfevents.1763720577.Bingo.22500.1
lightning_logs/version_8/: events.out.tfevents.1763731059.Bingo.26064.1
lightning_logs/version_9/: events.out.tfevents.1763731994.Bingo.9796.0  hparams.yaml
machinelearning/: README.md  testdata.html  testdata.ipynb  train.ipynb  train2.html  train2.ipynb  train3.ipynb  train4.ipynb  train5.html  train5.ipynb
