[project]
name = "dm-hw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pytorch-lightning>=2.4.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch; sys_platform == 'darwin'",
    "torch @ https://download.pytorch.org/whl/cu126/torch-2.9.0%2Bcu126-cp313-cp313-win_amd64.whl#sha256=651b1fad5f3eacd2c2fbae76b526cd75758e9839a04ab4fb48e78ebc51fb5e1a; sys_platform == 'win32'",
    "torchmetrics>=1.0.3",
    "hnswlib>=0.8.0",
]
